# workflow

./: CMakeLists.txt
cmake/: CompileFlags.cmake
type/: CMakeLists.txt
type/include/workflow/type/: DataStream.hpp  IDataStream.hpp  IDataType.hpp  IDataTypeVisitor.hpp  IVariantMethods.hpp  StructDataType.hpp  Variant.hpp  VariantDataType.hpp  VariantMethodsManager.hpp  VectorDataType.hpp
type/src/: DataStream.cpp  IDataStream.cpp  IDataType.cpp  IDataTypeVisitor.cpp  IVariantMethods.cpp  StructDataType.cpp  Variant.cpp  VariantDataType.cpp  VariantMethodsManager.cpp  VectorDataType.cpp
type/src/include/internal/: EqualsVisitor.hpp
type/test/: CMakeLists.txt  VectorDataStream.h  test_sequencer_type_StructDataType.cpp  test_sequencer_type_Variant.cpp  test_sequencer_type_VariantDataType.cpp  test_sequencer_type_VariantMethodsManager.cpp
utils/: CMakeLists.txt
utils/include/workflow/utils/: Demangle.hpp  Error.hpp  ErrorCode.hpp  Macros.hpp  OutputStreamHelpers.hpp
utils/src/: Demangle.cpp  Error.cpp  ErrorCode.cpp
